# Orka

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  ORKA_Technical_Spec_v2_5.docx  README.md  spec.md
.github/workflows/: build-dist.yml
packaging/linux/: orka.desktop
packaging/windows/: AppxManifest.xml
scripts/: build_linux.sh  build_linux_deb.sh  build_windows_ms_store.ps1
src/: conversion_engine.rs  hangul_engine.rs  hebrew_engine.rs  main.cpp  main.rs  selection_monitor.rs  settings.rs  settings_ui.rs  tray.rs
src/core/: hangul_engine.cpp  hangul_engine.h  hebrew_engine.cpp  hebrew_engine.h  language_engine.cpp  language_engine.h  utf8_utils.h
src/platform/linux/: selection_monitor.cpp  selection_monitor.h  text_injector.cpp  text_injector.h
src/platform/win/: selection_monitor.cpp  selection_monitor.h  text_injector.cpp  text_injector.h
src/ui/: overlay.cpp  overlay.h  settings_window.cpp  settings_window.h  sys_tray.h  sys_tray_linux.cpp  sys_tray_win.cpp
src/ui/webapp/: README.md  index.html
src/ui/webapp/src/app/: App.tsx
src/ui/webapp/src/app/components/: LanguageSelector.tsx
tests/: test_language_engine.cpp
